# ubuntu-dev-helpers

./: .gitignore  Makefile  README.md
arbor/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  config.example.yaml  config.yaml  requirements.txt  test_server.py  test_worker_pool.py  update.html  upload_server.py  worker_pool.py
arbor/static/: arbor.css
arbor/systemd/: arbor.service
dev-env-setup/: INSTALLATION.md  README.md  dev-server-setup.sh
iso-manager/: README.md  download_ubuntu_24.04.3.sh
scripts/: PortAppProx-v3  dev-server-setup.sh  gitlab-letsencrypt-setup.sh  install_gitlab.sh
vbox-factory/: README.md  create-vm.sh  plan.md  start-vm.sh  vbox-defaults.sh  vbox-lib.sh
vbox-sb-manager/: ARCHITECTURE.md  Cargo.toml  MIGRATION.md  PASSWORD-GUIDE.md  README.md  disable-kvm.sh  sign-vbox-modules.sh
vbox-sb-manager/examples/: USAGE_EXAMPLES.md
vbox-sb-manager/src/: config.rs  error.rs  lib.rs  main.rs
vbox-sb-manager/src/cli/: commands.rs  interactive.rs  mod.rs
vbox-sb-manager/src/modules/: kvm.rs  mod.rs  mok.rs  signing.rs  verification.rs
vbox-sb-manager/src/utils/: logger.rs  mod.rs  output.rs  system.rs
vbox-sb-manager/systemd/: vbox-sign-modules.service  virtualbox-sb-manager.service
vbox-sb-manager/tests/: integration_test.rs
vbox-ssh-manager/: README.md  config.sh  ssh-gen.sh  ssh-remote-enroll.sh
